[gd_scene load_steps=10 format=3 uid="uid://b00mqpn188nut"]

[ext_resource type="Script" path="res://omago.gd" id="1_b2t68"]
[ext_resource type="Texture2D" uid="uid://cxcegvdf2hw6r" path="res://Assets/Gatos&GlocksSprites/OMAGO.png" id="2_r0xo3"]
[ext_resource type="Texture2D" uid="uid://g0hvyjt6xbc0" path="res://Assets/Gatos&GlocksSprites/Fogo.png" id="3_ixfgy"]
[ext_resource type="AudioStream" uid="uid://dgnq8ncada6uc" path="res://Assets/audios/hit.wav" id="4_nh5nm"]
[ext_resource type="Script" path="res://MagiaInsana.gd" id="5_bweol"]
[ext_resource type="AudioStream" uid="uid://g5y18ekxdmov" path="res://Assets/audios/magiaSpell.mp3" id="6_a3i76"]
[ext_resource type="AudioStream" uid="uid://bhd6igiegw0nc" path="res://Assets/audios/fire.wav" id="7_bpb1y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u61ul"]
radius = 87.023

[sub_resource type="CircleShape2D" id="CircleShape2D_56ngi"]
radius = 84.0952

[node name="OMAGO" type="CharacterBody2D"]
script = ExtResource("1_b2t68")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u61ul")

[node name="OMAGOSPRITE" type="Sprite2D" parent="."]
position = Vector2(-6, -4)
scale = Vector2(5.34473, 5.62603)
texture = ExtResource("2_r0xo3")

[node name="Fire" type="Sprite2D" parent="."]
visible = false
position = Vector2(6, -33)
scale = Vector2(2.50781, 2.69131)
texture = ExtResource("3_ixfgy")

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nh5nm")

[node name="MagiaInsana" type="Area2D" parent="."]
script = ExtResource("5_bweol")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagiaInsana"]
position = Vector2(2, -3)
shape = SubResource("CircleShape2D_56ngi")

[node name="WeaponPivot" type="Marker2D" parent="MagiaInsana"]
position = Vector2(7, 2)

[node name="Sprite2D" type="Sprite2D" parent="MagiaInsana/WeaponPivot"]

[node name="ShootingPoint" type="Marker2D" parent="MagiaInsana/WeaponPivot/Sprite2D"]
unique_name_in_owner = true
position = Vector2(105, 1)

[node name="Timer" type="Timer" parent="MagiaInsana"]
autostart = true

[node name="magiaSpell" type="AudioStreamPlayer2D" parent="MagiaInsana"]
position = Vector2(3, 4)
stream = ExtResource("6_a3i76")

[node name="FireStartSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-3, 1)
stream = ExtResource("4_nh5nm")

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(2, 1)
stream = ExtResource("7_bpb1y")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="MagiaInsana/Timer" to="MagiaInsana" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
